--- a/SingularityUI/app/templates/requestDetail/requestBase.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestBase.hbs
@@ -1,29 +1,32 @@
-<div class="header-container">
+<div class="col-md-12" id="header">
     {{! Will get overwritten when we render this later on }}
     <div class="page-loader centered cushy"></div>
 </div>
 
-<div class="active-deploy-container">
+<div class="col-md-12" id="active-deploy">
     
 </div>
 
-
-<div class="active-tasks-container">
+<div class="col-md-12" id="stats">
     
 </div>
 
-<div class="scheduled-tasks-container">
+<div class="col-md-12" id="active-tasks">
     
 </div>
 
-<div class="historical-tasks-container">
+<div class="col-md-12" id="scheduled-tasks">
     
 </div>
 
-<div class="deploy-history-container">
+<div class="col-md-12" id="task-history">
     
 </div>
 
-<div class="request-history-container">
+<div class="col-md-12" id="deploy-history">
+    
+</div>
+
+<div class="col-md-12" id="request-history">
     
 </div>
