--- a/SingularityUI/app/templates/requestDetail/requestDeployHistory.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestDeployHistory.hbs
@@ -21,7 +21,7 @@
                             <td>{{ deployResult.deployStateHuman }}</td>
                             <td class="hidden-xs">{{ user }}</td>
                             <td class="hidden-xs" data-value="{{ timestamp }}">{{ timestampHuman }}</td>
-                            <td class="hidden-xs" class="actions-column">
+                            <td class="hidden-xs actions-column">
                                 <a data-deploy-id="{{ deployId }}" data-action="viewDeployJSON">
                                     <span class="glyphicon glyphicon-th-list" title="JSON"></span>
                                 </a>
