--- a/SingularityUI/app/templates/requestDetail/requestHistory.hbs
+++ b/SingularityUI/app/templates/requestDetail/requestHistory.hbs
@@ -19,7 +19,7 @@
                             <td>{{ stateHuman }}</td>
                             <td>{{ userHuman }}</td>
                             <td class="hidden-xs" data-value="{{ createdAt }}">{{ createdAtHuman }}</td>
-                            <td class="hidden-xs" class="actions-column">
+                            <td class="hidden-xs actions-column">
                                 <a data-local-request-history-id="{{ request.localRequestHistoryId }}" data-action="viewRequestHistoryJSON">
                                     <span class="glyphicon glyphicon-th-list" title="JSON"></span>
                                 </a>
