--- a/SingularityUI/app/templates/dashboard.hbs
+++ b/SingularityUI/app/templates/dashboard.hbs
@@ -91,7 +91,7 @@
                                     </a>
                                 </td>
                                 <td>
-                                    <span title="{{ id }}"><a href="{{appRoot}}/request/{{ id }}">{{#hardBreak id}}{{/hardBreak}}</a></span>
+                                    <span title="{{ id }}"><a href="{{appRoot}}/request/{{ id }}">{{ id }}</a></span>
                                 </td>
                                 <td class="hidden-xs" data-value="{{ timestamp }}">
                                     <span title="{{ timestamp }}">{{ timestampHuman }}</span>
