--- a/SingularityUI/app/templates/tasksTable/tasksCleaningBody.hbs
+++ b/SingularityUI/app/templates/tasksTable/tasksCleaningBody.hbs
@@ -17,7 +17,7 @@
             <tbody>
     {{/if}}
 {{/unless}}
-            {{#eachWithFn tasks}}
+            {{#each tasks}}
                 <tr data-task-id="{{ id }}">
                     <td>
                         <a title="{{ id }}" href="{{appRoot}}/task/{{ id }}">
@@ -33,7 +33,7 @@
                         </a>
                     </td>
                 </tr>
-            {{/eachWithFn}}
+            {{/each}}
 {{#unless rowsOnly}}
     {{#if haveTasks}}
         </tbody>
