--- a/SingularityUI/app/styles/breadcrumbs.styl
+++ b/SingularityUI/app/styles/breadcrumbs.styl
@@ -2,7 +2,7 @@
 
     li
         max-width 33%
-        height 1.2em
+        max-height 1.3em
         white-space nowrap
         overflow hidden
         text-overflow ellipsis
