--- a/SingularityUI/app/styles/table.styl
+++ b/SingularityUI/app/styles/table.styl
@@ -36,13 +36,15 @@
             a
                 position relative
                 overflow hidden
-                padding .6em
+                padding auto
+                padding-left 12px
+                padding-right 12px
                 display inline-block
                 background transparent
                 text-decoration none
                 font-size 13px
-                line-height 1.8em
-                margin 0 0 -13px
+                line-height 35px
+                margin 0
 
                 &:hover
                     color #fff
